tests/compilation_test_sources/struct_generics.rs
use must_implement_trait::must_implement_trait;

fn main() {
    let _instance = MySendStruct { value: 7 };
}

#[must_implement_trait(Send)]
struct MySendStruct<T: Send + Sync> {
    value: T
}
